# SearchService

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
development/: docker-compose.yml
elastic/: .env  docker-compose.yml  es_make_data.py  search_example.py
meili/: container_up.md  meili_make_data.py
web_app/backend/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
web_app/backend/src/app_config/: settings.py
web_app/backend/src/elastic/: check_connection.py  es_make_data.py  search.py  search_example.py
web_app/backend/src/meili/: meili_make_data.py
