[tool.poetry]
name = "searchservice"
version = "0.1.0"
description = ""
authors = ["Tarlex <tarlex.py@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
elasticsearch = "^8.1.0"
tqdm = "^4.63.0"
uvicorn = "^0.17.6"
meilisearch = "^0.18.1"
black = "^22.1.0"
hypercorn = {extras = ["trio"], version = "^0.13.2"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
